# OpenGL-Shell-Texturing

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert
src/: Camera.h  Mesh.h  Model.h  Shader.h  main.cpp
